5-implement-p2p-connection: Implemented VpnService and integrated it with ProxyService and MainActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,16 @@
             android:enabled="true"
             android:exported="false" >
         </service>
-
+        <service android:name=".app.vpn.MyVpnService"
+            android:permission="android.permission.BIND_VPN_SERVICE"
+            android:enabled="true"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="android.net.VpnService"/>
+            </intent-filter>
+            <meta-data android:name="android.net.VpnService.SUPPORTS_ALWAYS_ON"
+                android:value="false"/>
+        </service>
         <activity
             android:name=".app.MainActivity"
             android:exported="true"
